# Escultor

escultor_PA/: CMakeLists.txt  main.cpp  sculptor.cpp  sculptor.h
